# serial_bridge_v2

./: CMakeLists.txt  LICENSE  README.md  README_ja.md  package.xml
arduino_uno_serial_bridge/: README.md  platformio.ini
arduino_uno_serial_bridge/src/: config.hpp  defs.hpp  frame_data.hpp  io.cpp  io.hpp  main.cpp  serial_frame.hpp
config/: serial_bridge.yaml
esp32_s3_serial_bridge/: README.md  platformio.ini
esp32_s3_serial_bridge/src/: SDM15.cpp  can_node_task.cpp  config.hpp  defs.hpp  led_task.cpp  led_task.hpp  main.cpp  pid_task.cpp  pin_ctrl_init.cpp  pin_ctrl_init.hpp  pin_ctrl_task.cpp  pin_ctrl_task.hpp  robomas.cpp  serial_task.cpp
esp32_serial_bridge/: README.md
esp32_serial_bridge/src/: can_bridge_task.cpp  can_node_task.cpp  config.hpp  main.cpp  pin_ctrl_init.cpp  pin_ctrl_task.cpp  pin_ctrl_task.hpp  robomas.cpp  robomas.hpp  serial_task.cpp
esp32_serial_bridge_2/: platformio.ini
esp32_serial_bridge_2/src/: config.hpp  defs.hpp  frame_data.cpp  main.cpp  pin_ctrl_init.cpp  pin_ctrl_init.hpp  pin_ctrl_task.cpp  pin_ctrl_task.hpp  robomas.cpp
esp32_serial_bridge_runtime/src/: config.hpp  frame_data.cpp  frame_data.hpp  main.cpp  runtime_mode.cpp  runtime_mode.hpp  serial_task.cpp
esp32_unified_serial_bridge/: README.md  platformio.ini  show_config.py
esp32_unified_serial_bridge/src/: can_bridge_task.cpp  can_bridge_task.hpp  can_node_task.cpp  (+11 more)
launch/: serial_bridge.launch.py
src/: bridge_node.cpp  main.cpp  port_scanner.cpp
stm32_serial_bridge/: README.md  platformio.ini
xiao_esp32_s3_serial_bridge/: README.md  platformio.ini
(+25 files in other folders)
